--- a/springboot-chatting-v2-server/src/main/resources/application.properties
+++ b/springboot-chatting-v2-server/src/main/resources/application.properties
@@ -23,4 +23,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/springboot_chatting?serverTimezone=Asia/Seoul&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
+# spring.datasource.password=password
 spring.datasource.password=1234
